tests/fixtures/invalid/pow_int_float_dict.py
# Cannot call pow() with Int, Float, Dict[str, int]
x = pow(1, 1.0, {"a": 1})
